# baseball-simulator

./: .gitignore  README.md  pyproject.toml
apps/api/: main.py  repository.py
apps/web/: index.html
apps/web/static/: app.js  styles.css
data/raw/: sample_statcast.csv
docs/baseball-sim/: README.md  database-schema.md  feature-catalog.md  handoff.md  product-spec.md  repo-structure.md
infrastructure/docker/: postgres-compose.yml
infrastructure/scripts/: apply_schema.py  bootstrap_pipeline.py  evaluate_model_windows.py  evaluate_pooled_pa_model.py  train_default_pooled_pa_model.py
infrastructure/sql/: 001_init.sql
services/etl/: __init__.py  build_features.py  build_profiles.py  enrich_players.py  load_to_postgres.py  statcast_pull.py
services/modeling/: __init__.py  baseline_utils.py  inference.py  learned_damage.py  train_contact_model.py  train_pa_outcome_model.py  train_swing_model.py
services/simulation/: __init__.py  engine.py
services/trades/: evaluator.py
tests/: test_build_features.py  test_build_profiles.py  test_enrich_players.py  test_evaluate_model_windows.py  test_inference.py  test_matchups_api.py  test_simulation_engine.py  test_trade_evaluator.py  test_trades_api.py
