[project]
name = "baseball-matchup-sim"
version = "0.1.0"
description = "Public-data-first baseball matchup simulator scaffold."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "psycopg[binary]>=3.2.0",
  "pytest>=8.4.0",
  "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
